@@ -8,6 +8,9 @@ Changes for Perl programming language extension Module-Install
 	- Resolved #55594: Missing license (by Salve J. Nilsen) (ISHIGAKI)
 	- Resolved #5849 (load_extensions() causes "Subroutine %s
 	  redefined" warnings) (by Steve Hay) (ISHIGAKI)
+	- Resolved #19445: unknown functions in Makefile.PL should fail.
+	  and #19449: license is not found if unknown function is present
+	  (both are the same issue) (ISHIGAKI)
 	- Pass VERSION_FROM to EU::MM in the background to let it check
 	  version integrity (ISHIGAKI)
 
